--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,9 @@ zip_safe = False
 install_requires =
     pydantic
     requests
+    bravado
+    matplotlib
+    seaborn
 
 tests_require =
     pytest
