--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,16 +12,20 @@
 -e .
 -e .
 appnope==0.1.2; platform_system == 'Darwin'
+arrow==1.2.2; python_version >= '3.6'
 asttokens==2.0.5
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 backcall==0.2.0
 black==22.1.0; python_full_version >= '3.6.2'
+bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version != '3.5.0'
+bravado==11.0.3
 certifi==2021.10.8
 cfgv==3.3.1; python_full_version >= '3.6.1'
 charset-normalizer==2.0.11; python_version >= '3'
 click==8.0.3; python_version >= '3.6'
-coverage==6.3
+coverage==6.3.1
 coveralls==3.3.1
+cycler==0.11.0; python_version >= '3.6'
 debugpy==1.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 decorator==5.1.1; python_version >= '3.5'
 distlib==0.3.4
@@ -34,24 +38,37 @@ flake8-docstrings==1.6.0
 flake8-import-order==0.18.1
 flake8-quotes==3.3.1
 flake8==4.0.1
-identify==2.4.6; python_version >= '3.7'
+fonttools==4.29.1; python_version >= '3.7'
+fqdn==1.5.1
+identify==2.4.7; python_version >= '3.7'
 idna==3.3; python_version >= '3'
 iniconfig==1.1.1
-ipykernel==6.7.0
+ipykernel==6.8.0
 ipython==8.0.1; python_version >= '3.8'
+isoduration==20.11.0
 jedi==0.18.1; python_version >= '3.6'
+jsonpointer==2.2
+jsonref==0.2
+jsonschema[format]==4.4.0; python_version >= '3.7'
 jupyter-client==7.1.2; python_full_version >= '3.6.1'
 jupyter-core==4.9.1; python_version >= '3.6'
+kiwisolver==1.3.2; python_version >= '3.7'
 matplotlib-inline==0.1.3; python_version >= '3.5'
+matplotlib==3.5.1
 mccabe==0.6.1
+monotonic==1.6
+msgpack==1.0.3
 mypy-extensions==0.4.3
 nest-asyncio==1.5.4; python_version >= '3.5'
 nodeenv==1.6.0
+numpy==1.22.1; python_version >= '3.8'
 packaging==21.3; python_version >= '3.6'
+pandas==1.4.0; python_version >= '3.8'
 parso==0.8.3; python_version >= '3.6'
 pathspec==0.9.0
 pexpect==4.8.0; sys_platform != 'win32'
 pickleshare==0.7.5
+pillow==9.0.0; python_version >= '3.7'
 platformdirs==2.4.1; python_version >= '3.7'
 pluggy==1.0.0; python_version >= '3.6'
 pre-commit==2.17.0
@@ -65,21 +82,31 @@ pydocstyle==6.1.1; python_version >= '3.6'
 pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pygments==2.11.2; python_version >= '3.5'
 pyparsing==3.0.7; python_version >= '3.6'
+pyrsistent==0.18.1; python_version >= '3.7'
 pytest-cov==3.0.0
 pytest==6.2.5
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2021.3
 pyyaml==6.0; python_version >= '3.6'
 pyzmq==22.3.0; python_version >= '3.6'
 requests==2.27.1
-setuptools==60.6.0; python_version >= '3.7'
+rfc3339-validator==0.1.4
+rfc3987==1.3.8
+scipy==1.7.3; python_version < '3.11' and python_version >= '3.7'
+seaborn==0.11.2
+setuptools==60.7.0; python_version >= '3.7'
+simplejson==3.17.6; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 snowballstemmer==2.2.0
 stack-data==0.1.4
+swagger-spec-validator==2.7.4
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 tomli==2.0.0
 tornado==6.1; python_version >= '3.5'
 traitlets==5.1.1; python_version >= '3.7'
 typing-extensions==4.0.1; python_version >= '3.6'
+uri-template==1.1.0
 urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 virtualenv==20.13.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 wcwidth==0.2.5
+webcolors==1.11.1
