--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,43 @@
 #
 
 -i https://pypi.org/simple
+arrow==1.2.2; python_version >= '3.6'
+attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version != '3.5.0'
+bravado==11.0.3
 certifi==2021.10.8
 charset-normalizer==2.0.11; python_version >= '3'
+cycler==0.11.0; python_version >= '3.6'
+fonttools==4.29.1; python_version >= '3.7'
+fqdn==1.5.1
 idna==3.3; python_version >= '3'
+isoduration==20.11.0
+jsonpointer==2.2
+jsonref==0.2
+jsonschema[format]==4.4.0; python_version >= '3.7'
+kiwisolver==1.3.2; python_version >= '3.7'
+matplotlib==3.5.1
+monotonic==1.6
+msgpack==1.0.3
+numpy==1.22.1; python_version >= '3.8'
+packaging==21.3; python_version >= '3.6'
+pandas==1.4.0; python_version >= '3.8'
+pillow==9.0.0; python_version >= '3.7'
 pydantic==1.9.0
+pyparsing==3.0.7; python_version >= '3.6'
+pyrsistent==0.18.1; python_version >= '3.7'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2021.3
+pyyaml==6.0; python_version >= '3.6'
 requests==2.27.1
+rfc3339-validator==0.1.4
+rfc3987==1.3.8
+scipy==1.7.3; python_version < '3.11' and python_version >= '3.7'
+seaborn==0.11.2
+simplejson==3.17.6; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+swagger-spec-validator==2.7.4
 typing-extensions==4.0.1; python_version >= '3.6'
+uri-template==1.1.0
 urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+webcolors==1.11.1
