--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,11 @@ install_requires =
     bravado
     matplotlib
     seaborn
+    variation-normalizer
+    pandas
+    openpyxl
+    xlrd
+    xlwt
 
 tests_require =
     pytest
