--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -24,7 +24,7 @@ beautifulsoup4==4.10.0; python_version >= '3.1'
 biocommons.seqrepo==0.6.5; python_version >= '3.5'
 bioutils==0.5.5; python_version >= '3.6'
 black==22.1.0; python_full_version >= '3.6.2'
-boto3==1.20.46; python_version >= '3.6'
+boto3==1.20.47; python_version >= '3.6'
 botocore==1.23.47; python_version >= '3.6'
 bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
@@ -48,7 +48,7 @@ entrypoints==0.3; python_version >= '2.7'
 et-xmlfile==1.1.0; python_version >= '3.6'
 executing==0.8.2
 fake-useragent==0.1.11
-fastapi==0.73.0; python_full_version >= '3.6.1'
+fastapi==0.73.0
 filelock==3.4.2; python_version >= '3.7'
 flake8-annotations==2.7.0
 flake8-docstrings==1.6.0
@@ -90,7 +90,7 @@ msgpack==1.0.3
 mypy-extensions==0.4.3
 nest-asyncio==1.5.4; python_version >= '3.5'
 nodeenv==1.6.0
-numpy==1.22.1; python_version >= '3.8'
+numpy==1.22.1; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
 openpyxl==3.0.9
 packaging==21.3; python_version >= '3.6'
 pandas==1.4.0
@@ -118,7 +118,7 @@ pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pygments==2.11.2; python_version >= '3.5'
 pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
+pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4.0'
 pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
 pysam==0.18.0
@@ -154,7 +154,7 @@ tornado==6.1; python_version >= '3.5'
 tqdm==4.62.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 traitlets==5.1.1; python_version >= '3.7'
 typing-extensions==4.0.1; python_version >= '3.6'
-urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
 uvicorn==0.17.1; python_version >= '3.7'
 variation-normalizer==0.2.18
 virtualenv==20.13.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
