--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ beautifulsoup4==4.10.0; python_version >= '3.1'
 biocommons.seqrepo==0.6.5; python_version >= '3.5'
 bioutils==0.5.5; python_version >= '3.6'
 black==22.1.0; python_full_version >= '3.6.2'
-boto3==1.20.46; python_version >= '3.6'
+boto3==1.20.47; python_version >= '3.6'
 botocore==1.23.47; python_version >= '3.6'
 bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
@@ -36,7 +36,7 @@ decorator==5.1.1; python_version >= '3.5'
 et-xmlfile==1.1.0; python_version >= '3.6'
 executing==0.8.2
 fake-useragent==0.1.11
-fastapi==0.73.0; python_full_version >= '3.6.1'
+fastapi==0.73.0
 fonttools==4.29.1; python_version >= '3.7'
 frozendict==2.2.1; python_version >= '3.6'
 ga4gh.vrs[extras]==0.7.2; python_version >= '3.6'
@@ -64,7 +64,7 @@ matplotlib==3.5.1
 monotonic==1.6
 msgpack==1.0.3
 mypy-extensions==0.4.3
-numpy==1.22.1; python_version >= '3.8'
+numpy==1.22.1; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
 openpyxl==3.0.9
 packaging==21.3; python_version >= '3.6'
 pandas==1.4.0
@@ -86,7 +86,7 @@ pyfaidx==0.6.4
 pygments==2.11.2; python_version >= '3.5'
 pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
+pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4.0'
 pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
 pysam==0.18.0
@@ -116,7 +116,7 @@ tomli==2.0.0; python_version >= '3.7'
 tqdm==4.62.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 traitlets==5.1.1; python_version >= '3.7'
 typing-extensions==4.0.1; python_version >= '3.6'
-urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
 uvicorn==0.17.1; python_version >= '3.7'
 variation-normalizer==0.2.18
 w3lib==1.22.0
