--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -24,8 +24,8 @@ beautifulsoup4==4.10.0; python_version >= '3.1'
 biocommons.seqrepo==0.6.5; python_version >= '3.5'
 bioutils==0.5.5; python_version >= '3.6'
 black==22.1.0; python_full_version >= '3.6.2'
-boto3==1.20.47; python_version >= '3.6'
-botocore==1.23.47; python_version >= '3.6'
+boto3==1.20.49; python_version >= '3.6'
+botocore==1.23.49; python_version >= '3.6'
 bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
 bs4==0.0.1
@@ -44,7 +44,7 @@ debugpy==1.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2
 decorator==5.1.1; python_version >= '3.5'
 distlib==0.3.4
 docopt==0.6.2
-entrypoints==0.3; python_version >= '2.7'
+entrypoints==0.4; python_version >= '3.6'
 et-xmlfile==1.1.0; python_version >= '3.6'
 executing==0.8.2
 fake-useragent==0.1.11
@@ -56,7 +56,7 @@ flake8-import-order==0.18.1
 flake8-quotes==3.3.1
 flake8==4.0.1
 fonttools==4.29.1; python_version >= '3.7'
-frozendict==2.2.1; python_version >= '3.6'
+frozendict==2.3.0; python_version >= '3.6'
 ga4gh.vrs[extras]==0.7.2; python_version >= '3.6'
 ga4gh.vrsatile.pydantic==0.0.8; python_version >= '3.8'
 gene-normalizer==0.1.24; python_version >= '3.8'
@@ -65,7 +65,7 @@ greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (pla
 h11==0.13.0; python_version >= '3.6'
 hgvs==1.5.2
 humanfriendly==10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-identify==2.4.7; python_version >= '3.7'
+identify==2.4.8; python_version >= '3.7'
 idna==3.3; python_version >= '3'
 importlib-metadata==4.10.1; python_version < '3.10'
 inflection==0.5.1; python_version >= '3.5'
@@ -90,7 +90,7 @@ msgpack==1.0.3
 mypy-extensions==0.4.3
 nest-asyncio==1.5.4; python_version >= '3.5'
 nodeenv==1.6.0
-numpy==1.22.1; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
+numpy==1.22.2; python_version >= '3.8'
 openpyxl==3.0.9
 packaging==21.3; python_version >= '3.6'
 pandas==1.4.0
@@ -100,7 +100,7 @@ parso==0.8.3; python_version >= '3.6'
 pathspec==0.9.0
 pexpect==4.8.0; sys_platform != 'win32'
 pickleshare==0.7.5
-pillow==9.0.0; python_version >= '3.7'
+pillow==9.0.1; python_version >= '3.7'
 platformdirs==2.4.1; python_version >= '3.7'
 pluggy==1.0.0; python_version >= '3.6'
 pre-commit==2.17.0
@@ -118,12 +118,12 @@ pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pygments==2.11.2; python_version >= '3.5'
 pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4.0'
+pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
 pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
 pysam==0.18.0
 pytest-cov==3.0.0
-pytest==6.2.5
+pytest==7.0.0
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-jsonschema-objects==0.4.1
 pytz==2021.3
@@ -133,9 +133,9 @@ requests-html==0.10.0; python_version >= '3.6'
 requests==2.27.1
 rfc3987==1.3.8
 s3transfer==0.5.1; python_version >= '3.6'
-scipy==1.7.3; python_version < '3.11' and python_version >= '3.7'
+scipy==1.8.0; python_version < '3.11' and python_version >= '3.8'
 seaborn==0.11.2
-setuptools==60.7.0; python_version >= '3.7'
+setuptools==60.8.1; python_version >= '3.7'
 simplejson==3.17.6; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.2.0; python_version >= '3.5'
@@ -154,10 +154,10 @@ tornado==6.1; python_version >= '3.5'
 tqdm==4.62.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 traitlets==5.1.1; python_version >= '3.7'
 typing-extensions==4.0.1; python_version >= '3.6'
-urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
-uvicorn==0.17.1; python_version >= '3.7'
-variation-normalizer==0.2.18
-virtualenv==20.13.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+uvicorn==0.17.4; python_version >= '3.7'
+variation-normalizer==0.2.19
+virtualenv==20.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 w3lib==1.22.0
 wcwidth==0.2.5
 webcolors==1.11.1
