--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -24,8 +24,8 @@ beautifulsoup4==4.10.0; python_version >= '3.1'
 biocommons.seqrepo==0.6.5; python_version >= '3.5'
 bioutils==0.5.5; python_version >= '3.6'
 black==22.1.0; python_full_version >= '3.6.2'
-boto3==1.20.49; python_version >= '3.6'
-botocore==1.23.49; python_version >= '3.6'
+boto3==1.20.53
+botocore==1.23.53; python_version >= '3.6'
 bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
 bs4==0.0.1
@@ -63,12 +63,12 @@ greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (pla
 h11==0.13.0; python_version >= '3.6'
 hgvs==1.5.2
 humanfriendly==10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-identify==2.4.8; python_version >= '3.7'
+identify==2.4.9; python_version >= '3.7'
 idna==3.3; python_version >= '3'
 importlib-metadata==4.10.1; python_version < '3.10'
 inflection==0.5.1; python_version >= '3.5'
 iniconfig==1.1.1
-ipykernel==6.8.0
+ipykernel==6.9.0
 ipython==8.0.1; python_version >= '3.8'
 jedi==0.18.1; python_version >= '3.6'
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -99,7 +99,7 @@ pathspec==0.9.0
 pexpect==4.8.0; sys_platform != 'win32'
 pickleshare==0.7.5
 pillow==9.0.1; python_version >= '3.7'
-platformdirs==2.4.1; python_version >= '3.7'
+platformdirs==2.5.0; python_version >= '3.7'
 pluggy==1.0.0; python_version >= '3.6'
 pre-commit==2.17.0
 prompt-toolkit==3.0.27; python_full_version >= '3.6.2'
@@ -116,7 +116,7 @@ pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pygments==2.11.2; python_version >= '3.5'
 pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4.0'
+pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
 pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
 pysam==0.18.0
@@ -133,7 +133,7 @@ rfc3987==1.3.8
 s3transfer==0.5.1; python_version >= '3.6'
 scipy==1.8.0; python_version < '3.11' and python_version >= '3.8'
 seaborn==0.11.2
-setuptools==60.8.1; python_version >= '3.7'
+setuptools==60.8.2; python_version >= '3.7'
 simplejson==3.17.6; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.2.0; python_version >= '3.5'
@@ -147,12 +147,12 @@ strict-rfc3339==0.7
 swagger-spec-validator==2.7.4
 tabulate==0.8.9
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-tomli==2.0.0; python_version >= '3.7'
+tomli==2.0.1; python_version >= '3.7'
 tornado==6.1; python_version >= '3.5'
 tqdm==4.62.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 traitlets==5.1.1; python_version >= '3.7'
 typing-extensions==4.0.1; python_version >= '3.6'
-urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4.0'
+urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 uvicorn==0.17.4; python_version >= '3.7'
 variation-normalizer==0.2.19
 virtualenv==20.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
