Move normalizing cancer hotspots to dev cli

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,6 @@ requests = "*"
 bravado = "*"
 matplotlib = "*"
 seaborn = "*"
-variation-normalizer = "*"
 pandas = "*"
 openpyxl = "*"
 xlrd = "*"
@@ -29,3 +28,5 @@ flake8-import-order = "*"
 coverage = "*"
 pytest-cov = "*"
 ipykernel = "*"
+variation-normalizer = "*"
+click = "*"
