--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,9 +13,10 @@
 -e .
 anyio==3.5.0; python_full_version >= '3.6.2'
 appdirs==1.4.4
-appnope==0.1.2; sys_platform == 'darwin'
+appnope==0.1.2; platform_system == 'Darwin'
 argcomplete==2.0.0; python_version >= '3.6'
 argh==0.26.2
+arrow==1.2.2; python_version >= '3.6'
 asgiref==3.5.0; python_version >= '3.7'
 asttokens==2.0.5
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
@@ -24,16 +25,16 @@ beautifulsoup4==4.10.0; python_version >= '3.1'
 biocommons.seqrepo==0.6.5; python_version >= '3.5'
 bioutils==0.5.5; python_version >= '3.6'
 black==22.1.0; python_full_version >= '3.6.2'
-boto3==1.20.53
-botocore==1.23.53; python_version >= '3.6'
+boto3==1.21.1
+botocore==1.24.1; python_version >= '3.6'
 bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
 bs4==0.0.1
 canonicaljson==1.5.0; python_version ~= '3.5'
 certifi==2021.10.8
 cfgv==3.3.1; python_full_version >= '3.6.1'
-charset-normalizer==2.0.11; python_version >= '3'
-click==8.0.3; python_version >= '3.6'
+charset-normalizer==2.0.12; python_version >= '3'
+click==8.0.3
 coloredlogs==15.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 configparser==5.2.0; python_version >= '3.6'
 coverage==6.3.1
@@ -47,13 +48,14 @@ et-xmlfile==1.1.0; python_version >= '3.6'
 executing==0.8.2
 fake-useragent==0.1.11
 fastapi==0.73.0
-filelock==3.4.2; python_version >= '3.7'
+filelock==3.5.1; python_version >= '3.7'
 flake8-annotations==2.7.0
 flake8-docstrings==1.6.0
 flake8-import-order==0.18.1
 flake8-quotes==3.3.1
 flake8==4.0.1
 fonttools==4.29.1; python_version >= '3.7'
+fqdn==1.5.1
 frozendict==2.3.0; python_version >= '3.6'
 ga4gh.vrs[extras]==0.7.2; python_version >= '3.6'
 ga4gh.vrsatile.pydantic==0.0.8; python_version >= '3.8'
@@ -63,20 +65,21 @@ greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (pla
 h11==0.13.0; python_version >= '3.6'
 hgvs==1.5.2
 humanfriendly==10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-identify==2.4.9; python_version >= '3.7'
+identify==2.4.10; python_version >= '3.7'
 idna==3.3; python_version >= '3'
-importlib-metadata==4.10.1; python_version < '3.10'
+importlib-metadata==4.11.1; python_version < '3.10'
 inflection==0.5.1; python_version >= '3.5'
 iniconfig==1.1.1
-ipykernel==6.9.0
+ipykernel==6.9.1
 ipython==8.0.1; python_version >= '3.8'
+isoduration==20.11.0
 jedi==0.18.1; python_version >= '3.6'
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 jsonpointer==2.2
 jsonref==0.2
-jsonschema==3.2.0; python_version >= '3.7'
+jsonschema[format]==4.4.0; python_version >= '3.7'
 jupyter-client==7.1.2; python_full_version >= '3.6.1'
-jupyter-core==4.9.1; python_version >= '3.6'
+jupyter-core==4.9.2; python_version >= '3.6'
 kiwisolver==1.3.2; python_version >= '3.7'
 lxml==4.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 markdown==3.3.6; python_version >= '3.6'
@@ -88,10 +91,10 @@ msgpack==1.0.3
 mypy-extensions==0.4.3
 nest-asyncio==1.5.4; python_version >= '3.5'
 nodeenv==1.6.0
-numpy==1.22.2; python_version >= '3.8'
+numpy==1.22.2; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
 openpyxl==3.0.9
 packaging==21.3; python_version >= '3.6'
-pandas==1.4.0
+pandas==1.4.1
 parse==1.19.0
 parsley==1.3
 parso==0.8.3; python_version >= '3.6'
@@ -102,7 +105,7 @@ pillow==9.0.1; python_version >= '3.7'
 platformdirs==2.5.0; python_version >= '3.7'
 pluggy==1.0.0; python_version >= '3.6'
 pre-commit==2.17.0
-prompt-toolkit==3.0.27; python_full_version >= '3.6.2'
+prompt-toolkit==3.0.28; python_full_version >= '3.6.2'
 psycopg2==2.9.3; python_version >= '3.6'
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -116,12 +119,12 @@ pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pygments==2.11.2; python_version >= '3.5'
 pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
+pyppeteer==1.0.2; python_version >= '3.7' and python_full_version < '4.0.0'
 pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
 pysam==0.18.0
 pytest-cov==3.0.0
-pytest==7.0.0
+pytest==7.0.1
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-jsonschema-objects==0.4.1
 pytz==2021.3
@@ -129,19 +132,20 @@ pyyaml==6.0; python_version >= '3.6'
 pyzmq==22.3.0; python_version >= '3.6'
 requests-html==0.10.0; python_version >= '3.6'
 requests==2.27.1
+rfc3339-validator==0.1.4
 rfc3987==1.3.8
 s3transfer==0.5.1; python_version >= '3.6'
 scipy==1.8.0; python_version < '3.11' and python_version >= '3.8'
 seaborn==0.11.2
-setuptools==60.8.2; python_version >= '3.7'
+setuptools==60.9.2; python_version >= '3.7'
 simplejson==3.17.6; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.2.0; python_version >= '3.5'
 snowballstemmer==2.2.0
 soupsieve==2.3.1; python_version >= '3.6'
-sqlalchemy==1.4.31; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+sqlalchemy==1.4.31; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version != '3.5.0'
 sqlparse==0.4.2; python_version >= '3.5'
-stack-data==0.1.4
+stack-data==0.2.0
 starlette==0.17.1; python_version >= '3.6'
 strict-rfc3339==0.7
 swagger-spec-validator==2.7.4
@@ -151,9 +155,10 @@ tomli==2.0.1; python_version >= '3.7'
 tornado==6.1; python_version >= '3.5'
 tqdm==4.62.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 traitlets==5.1.1; python_version >= '3.7'
-typing-extensions==4.0.1; python_version >= '3.6'
+typing-extensions==4.1.1; python_version >= '3.6'
+uri-template==1.1.0
 urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-uvicorn==0.17.4; python_version >= '3.7'
+uvicorn==0.17.5; python_version >= '3.7'
 variation-normalizer==0.2.19
 virtualenv==20.13.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 w3lib==1.22.0
