--- a/requirements.txt
+++ b/requirements.txt
@@ -7,123 +7,54 @@
 
 -i https://pypi.org/simple
 anyio==3.5.0; python_full_version >= '3.6.2'
-appdirs==1.4.4
-appnope==0.1.2; sys_platform == 'darwin'
-argcomplete==2.0.0; python_version >= '3.6'
-argh==0.26.2
-asgiref==3.5.0; python_version >= '3.7'
-asttokens==2.0.5
+arrow==1.2.2; python_version >= '3.6'
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-backcall==0.2.0
-beautifulsoup4==4.10.0; python_version >= '3.1'
-biocommons.seqrepo==0.6.5; python_version >= '3.5'
-bioutils==0.5.5; python_version >= '3.6'
-black==22.1.0; python_full_version >= '3.6.2'
-boto3==1.20.53
-botocore==1.23.53; python_version >= '3.6'
+boto3==1.21.1
+botocore==1.24.1; python_version >= '3.6'
 bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
-bs4==0.0.1
-canonicaljson==1.5.0; python_version ~= '3.5'
 certifi==2021.10.8
-charset-normalizer==2.0.11; python_version >= '3'
-click==8.0.3; python_version >= '3.6'
-coloredlogs==15.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-configparser==5.2.0; python_version >= '3.6'
-cssselect==1.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+charset-normalizer==2.0.12; python_version >= '3'
 cycler==0.11.0; python_version >= '3.6'
-decorator==5.1.1; python_version >= '3.5'
 et-xmlfile==1.1.0; python_version >= '3.6'
-executing==0.8.2
-fake-useragent==0.1.11
 fastapi==0.73.0
 fonttools==4.29.1; python_version >= '3.7'
-frozendict==2.3.0; python_version >= '3.6'
-ga4gh.vrs[extras]==0.7.2; python_version >= '3.6'
-ga4gh.vrsatile.pydantic==0.0.8; python_version >= '3.8'
-gene-normalizer==0.1.24; python_version >= '3.8'
-gffutils==0.10.1
-greenlet==1.1.2; python_version >= '3' and platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
-h11==0.13.0; python_version >= '3.6'
-hgvs==1.5.2
-humanfriendly==10.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+fqdn==1.5.1
 idna==3.3; python_version >= '3'
-importlib-metadata==4.10.1; python_version < '3.10'
-inflection==0.5.1; python_version >= '3.5'
-ipython==8.0.1; python_version >= '3.8'
-jedi==0.18.1; python_version >= '3.6'
+isoduration==20.11.0
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 jsonpointer==2.2
 jsonref==0.2
-jsonschema==3.2.0; python_version >= '3.7'
+jsonschema[format]==4.4.0; python_version >= '3.7'
 kiwisolver==1.3.2; python_version >= '3.7'
-lxml==4.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-markdown==3.3.6; python_version >= '3.6'
-matplotlib-inline==0.1.3; python_version >= '3.5'
 matplotlib==3.5.1
 monotonic==1.6
 msgpack==1.0.3
-mypy-extensions==0.4.3
-numpy==1.22.2; python_version >= '3.8'
+numpy==1.22.2; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
 openpyxl==3.0.9
 packaging==21.3; python_version >= '3.6'
-pandas==1.4.0
-parse==1.19.0
-parsley==1.3
-parso==0.8.3; python_version >= '3.6'
-pathspec==0.9.0
-pexpect==4.8.0; sys_platform != 'win32'
-pickleshare==0.7.5
+pandas==1.4.1
 pillow==9.0.1; python_version >= '3.7'
-platformdirs==2.5.0; python_version >= '3.7'
-prompt-toolkit==3.0.27; python_full_version >= '3.6.2'
-psycopg2==2.9.3; python_version >= '3.6'
-ptyprocess==0.7.0
-pure-eval==0.2.2
 pydantic==1.9.0
-pyee==8.2.2
-pyfaidx==0.6.4
-pygments==2.11.2; python_version >= '3.5'
-pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
-pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
-pysam==0.18.0
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-jsonschema-objects==0.4.1
 pytz==2021.3
 pyyaml==6.0; python_version >= '3.6'
-requests-html==0.10.0; python_version >= '3.6'
 requests==2.27.1
+rfc3339-validator==0.1.4
 rfc3987==1.3.8
 s3transfer==0.5.1; python_version >= '3.6'
 scipy==1.8.0; python_version < '3.11' and python_version >= '3.8'
 seaborn==0.11.2
-setuptools==60.8.2; python_version >= '3.7'
 simplejson==3.17.6; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.2.0; python_version >= '3.5'
-soupsieve==2.3.1; python_version >= '3.6'
-sqlalchemy==1.4.31; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-sqlparse==0.4.2; python_version >= '3.5'
-stack-data==0.1.4
 starlette==0.17.1; python_version >= '3.6'
-strict-rfc3339==0.7
 swagger-spec-validator==2.7.4
-tabulate==0.8.9
-tomli==2.0.1; python_version >= '3.7'
-tqdm==4.62.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-traitlets==5.1.1; python_version >= '3.7'
-typing-extensions==4.0.1; python_version >= '3.6'
+typing-extensions==4.1.1; python_version >= '3.6'
+uri-template==1.1.0
 urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-uvicorn==0.17.4; python_version >= '3.7'
-variation-normalizer==0.2.19
-w3lib==1.22.0
-wcwidth==0.2.5
 webcolors==1.11.1
-websockets==10.1; python_version >= '3.7'
 xlrd==2.0.1
 xlwt==1.3.0
-yoyo-migrations==7.3.2
-zipp==3.7.0; python_version >= '3.7'
