--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,6 @@ install_requires =
     bravado
     matplotlib
     seaborn
-    variation-normalizer
     pandas
     openpyxl
     xlrd
@@ -40,6 +39,11 @@ install_requires =
 tests_require =
     pytest
     pytest-cov
+
+[options.extras_require]
+dev =
+    variation-normalizer
+    click
 
 [tool:pytest]
 addopts = --ignore setup.py --doctest-modules --cov-report term-missing --cov .
