--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -27,7 +27,7 @@ bioutils==0.5.5; python_version >= '3.6'
 black==22.1.0; python_full_version >= '3.6.2'
 boto3==1.21.3
 botocore==1.24.3; python_version >= '3.6'
-bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version != '3.5.0'
+bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
 bs4==0.0.1
 canonicaljson==1.5.0; python_version ~= '3.5'
@@ -46,7 +46,7 @@ entrypoints==0.4; python_version >= '3.6'
 et-xmlfile==1.1.0; python_version >= '3.6'
 executing==0.8.2
 fake-useragent==0.1.11
-fastapi==0.74.0
+fastapi==0.74.1
 filelock==3.6.0; python_version >= '3.7'
 flake8-annotations==2.7.0
 flake8-docstrings==1.6.0
@@ -114,7 +114,7 @@ pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pygments==2.11.2; python_version >= '3.5'
 pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
+pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4.0'
 pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
 pysam==0.18.0
@@ -136,7 +136,7 @@ six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3
 sniffio==1.2.0; python_version >= '3.5'
 snowballstemmer==2.2.0
 soupsieve==2.3.1; python_version >= '3.6'
-sqlalchemy==1.4.31; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version != '3.5.0'
+sqlalchemy==1.4.31; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlparse==0.4.2; python_version >= '3.5'
 stack-data==0.2.0
 starlette==0.17.1; python_version >= '3.6'
