--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,11 @@ arrow==1.2.2; python_version >= '3.6'
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 boto3==1.21.3
 botocore==1.24.3; python_version >= '3.6'
-bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_full_version != '3.5.0'
+bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
 certifi==2021.10.8
 charset-normalizer==2.0.12; python_version >= '3'
-et-xmlfile==1.1.0; python_version >= '3.6'
-fastapi==0.74.0
+fastapi==0.74.1
 fqdn==1.5.1
 idna==3.3; python_version >= '3'
 isoduration==20.11.0
@@ -27,7 +26,6 @@ jsonschema[format]==4.4.0; python_version >= '3.7'
 monotonic==1.6
 msgpack==1.0.3
 numpy==1.22.2; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
-openpyxl==3.0.9
 pandas==1.4.1
 pydantic==1.9.0
 pyrsistent==0.18.1; python_version >= '3.7'
@@ -47,5 +45,3 @@ typing-extensions==4.1.1; python_version >= '3.6'
 uri-template==1.1.0
 urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 webcolors==1.11.1
-xlrd==2.0.1
-xlwt==1.3.0
