--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@
 anyio==3.5.0; python_full_version >= '3.6.2'
 arrow==1.2.2; python_version >= '3.6'
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-boto3==1.21.3
-botocore==1.24.3; python_version >= '3.6'
+boto3==1.21.4
+botocore==1.24.4; python_version >= '3.6'
 bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 bravado==11.0.3
 certifi==2021.10.8
@@ -25,8 +25,6 @@ jsonref==0.2
 jsonschema[format]==4.4.0; python_version >= '3.7'
 monotonic==1.6
 msgpack==1.0.3
-numpy==1.22.2; python_version < '3.10' and platform_machine != 'aarch64' and platform_machine != 'arm64'
-pandas==1.4.1
 pydantic==1.9.0
 pyrsistent==0.18.1; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -45,3 +43,4 @@ typing-extensions==4.1.1; python_version >= '3.6'
 uri-template==1.1.0
 urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 webcolors==1.11.1
+xlrd==2.0.1
