--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -101,7 +101,7 @@ pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 pygments==2.11.2; python_version >= '3.5'
 pyliftover==0.4
 pyparsing==3.0.7; python_version >= '3.6'
-pyppeteer==1.0.2; python_version >= '3.7' and python_version < '4'
+pyppeteer==1.0.2; python_version >= '3.7' and python_full_version < '4.0.0'
 pyquery==1.4.3
 pyrsistent==0.18.1; python_version >= '3.7'
 pysam==0.19.0
