--- a/Pipfile
+++ b/Pipfile
@@ -21,7 +21,8 @@ flake8-import-order = "*"
 coverage = "*"
 pytest-cov = "*"
 ipykernel = "*"
-variation-normalizer = "*"
+variation-normalizer = ">= 0.4.0a7"
 openpyxl = "*"
 pandas = "*"
 asyncclick = "*"
+xlrd = "*"
