--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = [
+etl = [
     "variation-normalizer~= 0.8.0.dev0",
     "asyncclick",
     "openpyxl",
