chore!: use `src` layout instead of flat layout
close #59

--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,7 @@ dmypy.json
 .pyre/
 
 # data
-evidence/data/*
-evidence/dev/etl/data/*
+src/evidence/data/*
+src/evidence/dev/etl/data/*
 
 .DS_Store
