chore!: use `src` layout instead of flat layout (#60)
close #59

--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ dmypy.json
 .pyre/
 
 # data
-evidence/data/*
-evidence/dev/etl/data/*
+src/evidence/data/*
+src/evidence/dev/etl/data/*
 
 .DS_Store
